NetBSD Problem Report #42194

From www@NetBSD.org  Sat Oct 17 18:33:04 2009
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0048563BFE5
	for <gnats-bugs@gnats.netbsd.org>; Sat, 17 Oct 2009 18:33:03 +0000 (UTC)
Message-Id: <20091017183303.B61C563BC1C@www.NetBSD.org>
Date: Sat, 17 Oct 2009 18:33:03 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: puffs inactive and page cache are having a bad trip
X-Send-Pr-Version: www-1.0

>Number:         42194
>Category:       kern
>Synopsis:       puffs inactive and page cache are having a bad trip
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Oct 17 18:35:00 +0000 2009
>Closed-Date:    Fri Dec 04 20:29:20 +0000 2009
>Last-Modified:  Fri Dec 18 06:00:03 +0000 2009
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
puffs_vnop_inactive() does not investigate if there is dirty
data in the page cache when it issues INACTIVE.  Later, when
the dirty data is flushed, SETATTR and WRITE are issued to
the file server for a node which should have no external
references.
>How-To-Repeat:

>Fix:
Do not issue inactive before all cached operations have been completed.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: pooka@NetBSD.org
State-Changed-When: Fri, 04 Dec 2009 22:29:20 +0200
State-Changed-Why:
fixed in puffs_vnops.c rev 1.141


From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42194 CVS commit: src/sys/fs/puffs
Date: Fri, 4 Dec 2009 20:26:36 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Fri Dec  4 20:26:35 UTC 2009

 Modified Files:
 	src/sys/fs/puffs: puffs_vnops.c

 Log Message:
 Push all information cached in the vnode to the file server before
 issuing INACTIVE.  PR kern/42194.
 Also, send setattr in fsync asynchronously if FSYNC_WAIT is not set.


 To generate a diff of this commit:
 cvs rdiff -u -r1.140 -r1.141 src/sys/fs/puffs/puffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/42194 CVS commit: [netbsd-5] src/sys/fs/puffs
Date: Fri, 18 Dec 2009 05:58:26 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri Dec 18 05:58:26 UTC 2009

 Modified Files:
 	src/sys/fs/puffs [netbsd-5]: puffs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by pooka in ticket #1184):
 	sys/fs/puffs/puffs_vnops.c: revision 1.141 via patch
 Push all information cached in the vnode to the file server before
 issuing INACTIVE.  PR kern/42194.
 Also, send setattr in fsync asynchronously if FSYNC_WAIT is not set.


 To generate a diff of this commit:
 cvs rdiff -u -r1.129.4.5 -r1.129.4.6 src/sys/fs/puffs/puffs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.