Pull up following revision(s) (requested by pooka in ticket #1184): 	sys/fs/puffs/puffs_vnops.c: revision 1.141 via patch Push all information cached in the vnode to the file server before issuing INACTIVE.  PR kern/42194. Also, send setattr in fsync asynchronously if FSYNC_WAIT is not set.